fix input element alignement in InertiaCalculator.tsx by removing span encapsulation

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -197,6 +197,9 @@
   .cardCalculator:hover span {
     transform: translateX(4px);
   }
+  .cardCalculator:hover .fieldInput {
+    transform: translateX(4px);
+  }
 }
 
 @media (prefers-reduced-motion) {
@@ -381,16 +384,6 @@
   font-size: 1em;
 }
 
-.num {      
-  width: 90%;
-  min-width: 30px;
-  border-radius: var(--border-radius);
-  height: 2em;
-  border: none;
-  /* margin-right: 5px; */
-  font-size: 1em;
-  
-}
 
 .checkbox {
   display: inline;
@@ -409,7 +402,7 @@
   /* margin-left: 3px; */
 }
 
-.num {
+.fieldInput {
   margin: .25rem;
   border-radius: var(--border-radius);
   height: 2rem;
@@ -418,7 +411,7 @@
   font-weight: bold;
   font-size: 1rem;
   min-width: 40px;
-  width: 100%;
+  width: 95%;
 }
 
 .result {
